# tensorflow_perf

./: .gitignore  CMakeLists.txt  Makefile  README.md
docker/: Dockerfile  FindTensorFlow.cmake  devcontainer.json
python/: benchmark.py  parse_tfrecord.py  save_resnet-50.py  save_resnet-v2.py  save_resnet50.py  save_yolo-v3.py
src/: CMakeLists.txt  benchmark.cpp  benchmark_tfrecord.cpp
